<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/Registeration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="61dp"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="59dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/maven_pro"
                android:gravity="center"
                android:text="@string/registration_page"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="90dp"
                android:layout_marginBottom="44dp"
                android:fontFamily="@font/maven_pro"
                android:text="@string/create_new_account"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Registeration" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="293dp"
                android:layout_height="46dp"
                android:layout_marginStart="59dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="59dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editTextTextEmailAddress2"
                android:layout_width="291dp"
                android:layout_height="49dp"
                android:layout_marginStart="61dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="59dp"
                android:layout_marginBottom="25dp"
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editTextTextPassword2"
                android:layout_width="288dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextTextPassword3"
                android:layout_width="287dp"
                android:layout_height="48dp"
                android:layout_marginStart="59dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="65dp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editTextPhone2"
                android:layout_width="287dp"
                android:layout_height="50dp"
                android:layout_marginStart="59dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="65dp"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="288dp"
                android:layout_height="49dp"
                android:layout_marginStart="59dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="64dp"
                android:ems="10"
                android:hint="@string/date_of_birth"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPhone2"
                android:autofillHints="" />

            <Button
                android:id="@+id/button3"
                android:layout_width="122dp"
                android:layout_height="49dp"
                android:layout_marginStart="144dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="145dp"
                android:layout_marginBottom="32dp"
                android:text="@string/submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextDate" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout></androidx.constraintlayout.widget.ConstraintLayout>